--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "faker": "^6.6.6",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "multer": "^2.0.2",
     "pg": "^8.14.1"
   },
   "engines": {
